--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
                   <li>Created - <span>4 July 2021</span></li>
                   <li>technology used - <span>Html,Css,Javascript</span></li>
                   <li>Role - <span>Frontend</span></li>
-                  <li>View Online - <span><a href="my project/1/index.html" target="_blank">Click here</a></span></li>
+                  <li>View Online - <span><a href="https://softengr-web.github.io/portfolio-01/" target="_blank">Click here</a></span></li>
                 </ul>
               </div>
             </div>
