solve the problem

--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
                   <li>Created - <span>4 Dec 2020</span></li>
                   <li>technology used - <span>Html,Css,Javascript</span></li>
                   <li>Role - <span>Frontend</span></li>
-                  <li>View Online - <span><a href="https://softengr-web.github.io/-portfolio-03/" target="_blank">Click here</a></span></li>
+                  <li>View Online - <span><a href="https://softengr-web.github.io/portfolio-03/" target="_blank">Click here</a></span></li>
                 </ul>
               </div>
             </div>
@@ -274,7 +274,7 @@
                           <li>Created - <span>26 Jan 2021</span></li>
                           <li>technology used - <span>Html,Css,Bootstrap-5</span></li>
                           <li>Role - <span>Frontend</span></li>
-                          <li>View Online - <span><a href="https://softengr-web.github.io/-portfolio-04/" target="_blank">Click here</a></span></li>
+                          <li>View Online - <span><a href="https://softengr-web.github.io/portfolio-04/" target="_blank">Click here</a></span></li>
                         </ul>
                       </div>
                     </div>
@@ -296,7 +296,7 @@
                   <li>Created - <span>17 Dec 2020</span></li>
                   <li>technology used - <span>Html,Css,Javascript</span></li>
                   <li>Role - <span>Frontend</span></li>
-                  <li>View Online - <span><a href="https://softengr-web.github.io/-portfolio-05/" target="_blank">Click here</a></span></li>
+                  <li>View Online - <span><a href="https://softengr-web.github.io/portfolio-05/" target="_blank">Click here</a></span></li>
                 </ul>
               </div>
             </div>
@@ -318,7 +318,7 @@
                           <li>Created - <span>02 Nov 2020</span></li>
                           <li>technology used - <span>Html,Css</span></li>
                           <li>Role - <span>Frontend</span></li>
-                          <li>View Online - <span><a href="https://softengr-web.github.io/-portfolio-06/" target="_blank">Click here</a></span></li>
+                          <li>View Online - <span><a href="https://softengr-web.github.io/portfolio-06/" target="_blank">Click here</a></span></li>
                         </ul>
                       </div>
                     </div>
@@ -340,7 +340,7 @@
                   <li>Created - <span>25 Sep 2020</span></li>
                   <li>technology used - <span>Html,Css</span></li>
                   <li>Role - <span>Frontend</span></li>
-                  <li>View Online - <span><a href="https://softengr-web.github.io/-portfolio-07/" target="_blank">Click here</a></span></li>
+                  <li>View Online - <span><a href="https://softengr-web.github.io/portfolio-07/" target="_blank">Click here</a></span></li>
                 </ul>
               </div>
             </div>
@@ -362,7 +362,7 @@
                           <li>Created - <span>07 Mar 2020</span></li>
                           <li>technology used - <span>Html,Css</span></li>
                           <li>Role - <span>Frontend</span></li>
-                          <li>View Online - <span><a href="https://softengr-web.github.io/-portfolio-08/" target="_blank">Click here</a></span></li>
+                          <li>View Online - <span><a href="https://softengr-web.github.io/portfolio-08/" target="_blank">Click here</a></span></li>
                         </ul>
                       </div>
                     </div>
@@ -384,7 +384,7 @@
                   <li>Created - <span>23 Feb 2020</span></li>
                   <li>technology used - <span>Html,Css,Javascript</span></li>
                   <li>Role - <span>Frontend</span></li>
-                  <li>View Online - <span><a href="https://softengr-web.github.io/-portfolio-09/" target="_blank">Click here</a></span></li>
+                  <li>View Online - <span><a href="https://softengr-web.github.io/portfolio-09/" target="_blank">Click here</a></span></li>
                 </ul>
               </div>
             </div>
@@ -406,7 +406,7 @@
                           <li>Created - <span>8 Feb 2020</span></li>
                           <li>technology used - <span>Html,Css</span></li>
                           <li>Role - <span>Frontend</span></li>
-                          <li>View Online - <span><a href="https://softengr-web.github.io/-portfolio-10/" target="_blank">Click here</a></span></li>
+                          <li>View Online - <span><a href="https://softengr-web.github.io/portfolio-10/" target="_blank">Click here</a></span></li>
                         </ul>
                       </div>
                     </div>
@@ -428,7 +428,7 @@
                   <li>Created - <span>4 Jan 2020</span></li>
                   <li>technology used - <span>Html,Css</span></li>
                   <li>Role - <span>Frontend</span></li>
-                  <li>View Online - <span><a href="https://softengr-web.github.io/-portfolio-11/" target="_blank">Click here</a></span></li>
+                  <li>View Online - <span><a href="https://softengr-web.github.io/portfolio-11/" target="_blank">Click here</a></span></li>
                 </ul>
               </div>
             </div>
@@ -450,7 +450,7 @@
                           <li>Created - <span>14 Dec 2019</span></li>
                           <li>technology used - <span>Html,Css</span></li>
                           <li>Role - <span>Frontend</span></li>
-                          <li>View Online - <span><a href="https://softengr-web.github.io/-portfolio-12/" target="_blank">Click here</a></span></li>
+                          <li>View Online - <span><a href="https://softengr-web.github.io/portfolio-12/" target="_blank">Click here</a></span></li>
                         </ul>
                       </div>
                     </div>
@@ -472,7 +472,7 @@
                   <li>Created - <span>10 sep 2021</span></li>
                   <li>technology used - <span>Html,Css,Javascript</span></li>
                   <li>Role - <span>Developer</span></li>
-                  <li>View Online - <span><a href="https://softengr-web.github.io/-portfolio-13/" target="_blank">Click here</a></span></li>
+                  <li>View Online - <span><a href="https://softengr-web.github.io/portfolio-13/" target="_blank">Click here</a></span></li>
                 </ul>
               </div>
             </div>
@@ -494,7 +494,7 @@
                           <li>Created - <span>13 Oct 2020</span></li>
                           <li>technology used - <span>Html,Css,Javascript</span></li>
                           <li>Role - <span>Developer</span></li>
-                          <li>View Online - <span><a href="https://softengr-web.github.io/-portfolio-14/" target="_blank">Click here</a></span></li>
+                          <li>View Online - <span><a href="https://softengr-web.github.io/portfolio-14/" target="_blank">Click here</a></span></li>
                         </ul>
                       </div>
                     </div>
@@ -516,7 +516,7 @@
                   <li>Created - <span>10 Apr 2020</span></li>
                   <li>technology used - <span>Html,Css,Javascript</span></li>
                   <li>Role - <span>Developer</span></li>
-                  <li>View Online - <span><a href="https://softengr-web.github.io/-portfolio-15/" target="_blank">Click here</a></span></li>
+                  <li>View Online - <span><a href="https://softengr-web.github.io/portfolio-15/" target="_blank">Click here</a></span></li>
                 </ul>
               </div>
             </div>
@@ -538,7 +538,7 @@
                           <li>Created - <span>14 may 2020</span></li>
                           <li>technology used - <span>Css,Javascript</span></li>
                           <li>Role - <span>Developer</span></li>
-                          <li>View Online - <span><a href="https://softengr-web.github.io/-portfolio-16/" target="_blank">Click here</a></span></li>
+                          <li>View Online - <span><a href="https://softengr-web.github.io/portfolio-16/" target="_blank">Click here</a></span></li>
                         </ul>
                       </div>
                     </div>
@@ -560,7 +560,7 @@
                   <li>Created - <span>27 May 2021</span></li>
                   <li>technology used - <span>Html,Css,Javascript</span></li>
                   <li>Role - <span>Developer</span></li>
-                  <li>View Online - <span><a href="https://softengr-web.github.io/-portfolio-17/" target="_blank">Click here</a></span></li>
+                  <li>View Online - <span><a href="https://softengr-web.github.io/portfolio-17/" target="_blank">Click here</a></span></li>
                 </ul>
               </div>
             </div>
@@ -582,7 +582,7 @@
                           <li>Created - <span>18 mar 2021</span></li>
                           <li>technology used - <span>Html,Css,Javascript</span></li>
                           <li>Role - <span>Developer</span></li>
-                          <li>View Online - <span><a href="https://softengr-web.github.io/-portfolio-18/" target="_blank">Click here</a></span></li>
+                          <li>View Online - <span><a href="https://softengr-web.github.io/portfolio-18/" target="_blank">Click here</a></span></li>
                         </ul>
                       </div>
                     </div>
@@ -604,7 +604,7 @@
                   <li>Created - <span>28 Sep 2019</span></li>
                   <li>technology used - <span>Html,Css,Javascript</span></li>
                   <li>Role - <span>Developer</span></li>
-                  <li>View Online - <span><a href="https://softengr-web.github.io/-portfolio-19/" target="_blank">Click here</a></span></li>
+                  <li>View Online - <span><a href="https://softengr-web.github.io/portfolio-19/" target="_blank">Click here</a></span></li>
                 </ul>
               </div>
             </div>
@@ -626,7 +626,7 @@
                           <li>Created - <span>18 Nov 2020</span></li>
                           <li>technology used - <span>Html,Css,Javascript</span></li>
                           <li>Role - <span>Developer</span></li>
-                          <li>View Online - <span><a href="https://softengr-web.github.io/-portfolio-20/" target="_blank">Click here</a></span></li>
+                          <li>View Online - <span><a href="https://softengr-web.github.io/portfolio-20/" target="_blank">Click here</a></span></li>
                         </ul>
                       </div>
                     </div>
@@ -648,7 +648,7 @@
                   <li>Created - <span>4 Dec 2020</span></li>
                   <li>technology used - <span>Html,Css,Javascript</span></li>
                   <li>Role - <span>Developer</span></li>
-                  <li>View Online - <span><a href="https://softengr-web.github.io/-portfolio-21/" target="_blank">Click here</a></span></li>
+                  <li>View Online - <span><a href="https://softengr-web.github.io/portfolio-21/" target="_blank">Click here</a></span></li>
                 </ul>
               </div>
             </div>
@@ -670,7 +670,7 @@
                           <li>Created - <span>4 Dec 2020</span></li>
                           <li>technology used - <span>Html,Css,Javascript</span></li>
                           <li>Role - <span>Developer</span></li>
-                          <li>View Online - <span><a href="https://softengr-web.github.io/-portfolio-22/" target="_blank">Click here</a></span></li>
+                          <li>View Online - <span><a href="https://softengr-web.github.io/portfolio-22/" target="_blank">Click here</a></span></li>
                         </ul>
                       </div>
                     </div>
@@ -693,7 +693,7 @@
                   <li>Created - <span>03 Feb  2021</span></li>
                   <li>technology used - <span>Html,Css,Javascript</span></li>
                   <li>Role - <span>Developer</span></li>
-                  <li>View Online - <span><a href="https://softengr-web.github.io/-portfolio-23/" target="_blank">Click here</a></span></li>
+                  <li>View Online - <span><a href="https://softengr-web.github.io/portfolio-23/" target="_blank">Click here</a></span></li>
                 </ul>
               </div>
             </div>
@@ -715,7 +715,7 @@
                           <li>Created - <span>16 Jun 2021</span></li>
                           <li>technology used - <span>Html,Css,Javascript</span></li>
                           <li>Role - <span>Developer</span></li>
-                          <li>View Online - <span><a href="https://softengr-web.github.io/-portfolio-24/" target="_blank">Click here</a></span></li>
+                          <li>View Online - <span><a href="https://softengr-web.github.io/portfolio-24/" target="_blank">Click here</a></span></li>
                         </ul>
                       </div>
                     </div>
